--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
       "heroku-postbuild": "cd server && npm install && npm run build"
     },
     "engines": {
-          "node": "16.20.2",
-          "npm": "11.0.0"
+      "node": "16.20.2",
+      "npm": "9.x"
     }
 }
+  
   
