--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-      "heroku-postbuild": "cd server && npm install && npm run build"
+      "heroku-postbuild": "cd server && npm install"
     },
     "engines": {
       "node": "16.20.2",
