--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@mui/x-data-grid": "^7.24.1",
+    "@toolpad/core": "^0.12.0",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
     "mongodb": "^6.12.0",
