--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "scripts": {
-      "heroku-postbuild": "cd server && npm install"
+        "heroku-postbuild": "cd server && npm install"
     },
     "engines": {
-      "node": "16.20.2",
-      "npm": "9.x"
+        "node": "16.20.2",
+        "npm": "9.x"
+    },
+    "dependencies": {
+        "framer-motion": "^12.4.10"
     }
 }
-  
-  
