--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@toolpad/core": "^0.12.0",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
+    "framer-motion": "^11.0.3",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.4",
     "react": "^18.3.1",
