--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,6 @@
   "devDependencies": {
     "@types/react": "^19.0.5",
     "@types/react-dom": "^19.0.3",
-    "@types/framer-motion": "^10.18.0"
+    "typescript": "^4.9.5"
   }
 }
